Fixed the text alignment on the front page.

--- a/inventium_front.css
+++ b/inventium_front.css
@@ -4,9 +4,9 @@
    margin-right: auto; */
 	margin-top: 15px;
 /*   width: 860px; */
-   background-color: #fff;
-   border-width: 1px;
-   border-style: solid;
+  background-color: #fff;
+  border-width: 1px;
+  border-style: solid;
 }
 
 
@@ -30,6 +30,8 @@
 .front div#comments {
 	display: none;
 }
+
+
 
 .front table.portfolio {
    background-color: #fff;
@@ -57,9 +59,6 @@
    margin: 5px;
 }
 
-.front div.main_text {
-	padding: 10px 20px;
-}
 
 .front a#tobylane {
    display: block;
@@ -77,3 +76,30 @@
 .front a#tobylane span {
    display: none;
 }
+
+
+
+
+
+.front div.main_text {
+  padding: 10px 20px;
+}
+
+
+.front table.main_text th {
+  text-align: left;
+  padding: 0px 0px 0px 10px;
+  color: #000;
+}
+
+.front table.main_text h2 {
+  color: #000;
+}
+
+.front table.main_text td {
+  padding: 0px 10px;
+  width: 50%;
+  vertical-align: top;
+}
+
+
